--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
@@ -77,10 +78,12 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.0",
     "uploadthing": "^7.5.2",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "worker-thread": "^1.1.0",
     "workerjs": "^0.1.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
